--- a/package.json
+++ b/package.json
@@ -1,37 +1,44 @@
 {
-  "name": "plutus-contract",
-  "version": "1.0.0",
-  "description": "",
-  "main": "hardhat.config.js",
-  "directories": {
-    "test": "test"
-  },
-  "scripts": {
-    "test": "npm run clean && hardhat test",
-    "build": "npm run clean && hardhat compile --network testnet",
-    "deploy": "hardhat run scripts/deploy.js --network testnet",
-    "lint": "prettier-standard --format",
-    "clean": "rimraf cache artifacts"
-  },
-  "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "@eth-optimism/plugins": "0.0.4",
-    "@nomiclabs/hardhat-ethers": "^2.0.1",
-    "@nomiclabs/hardhat-etherscan": "^2.1.1",
-    "@openzeppelin/hardhat-upgrades": "^1.7.0",
-    "dotenv": "8.2.0",
-    "ethers": "^5.1.4",
-    "hardhat": "^2.2.1",
-    "prettier-standard": "16.4.1",
-    "rimraf": "3.0.2"
-  },
-  "dependencies": {
-    "@chainlink/contracts": "^0.1.7",
-    "@openzeppelin/contracts": "^4.1.0",
-    "@openzeppelin/contracts-ethereum-package": "^3.0.0",
-    "@openzeppelin/contracts-upgradeable": "^4.1.0",
-    "chai": "^4.3.0",
-    "web3": "^1.3.4"
-  }
+    "name": "plutus-contract",
+    "version": "1.0.0",
+    "description": "",
+    "main": "hardhat.config.js",
+    "directories": {
+        "test": "test"
+    },
+    "scripts": {
+        "test": "npm run clean && hardhat test",
+        "build": "npm run clean && hardhat compile --network testnet",
+        "deploy": "hardhat run scripts/deploy.js --network testnet",
+        "deployv2": "hardhat run scripts/deploy_v2.js --network testnet",
+        "lint": "prettier-standard --format",
+        "clean": "rimraf cache artifacts"
+    },
+    "author": "",
+    "license": "MIT",
+    "devDependencies": {
+        "@eth-optimism/plugins": "0.0.4",
+        "@nomiclabs/hardhat-ethers": "^2.0.1",
+        "@nomiclabs/hardhat-etherscan": "^2.1.1",
+        "@openzeppelin/hardhat-upgrades": "^1.7.0",
+        "dotenv": "8.2.0",
+        "ethers": "^5.1.4",
+        "hardhat": "^2.9.1",
+        "hardhat-contract-sizer": "^2.5.1",
+        "prettier-standard": "16.4.1",
+        "prettier": "^2.6.1",
+        "prettier-plugin-solidity": "^1.0.0-beta.19",
+        "rimraf": "3.0.2"
+    },
+    "dependencies": {
+        "@chainlink/contracts": "^0.1.7",
+        "@openzeppelin/contracts": "^4.1.0",
+        "@openzeppelin/contracts-ethereum-package": "^3.0.0",
+        "@openzeppelin/contracts-upgradeable": "^4.1.0",
+        "eslint": "^8.11.0",
+        "hardhat-deploy": "^0.11.2",
+        "hardhat-gas-reporter": "^1.0.8",
+        "chai": "^4.3.0",
+        "web3": "^1.3.4"
+    }
 }
